# gpt_temoto_demo

./: README.md
vaultbot_temoto_config/temoto_actions/ta_get_action_state/: CMakeLists.txt  package.xml  umrf.json
vaultbot_temoto_config/temoto_actions/ta_move_arm/: CMakeLists.txt  package.xml  umrf.json
vaultbot_temoto_config/temoto_actions/ta_navigate/: CMakeLists.txt  package.xml  umrf.json
vaultbot_temoto_config/temoto_actions/ta_start_component/: CMakeLists.txt  package.xml  umrf.json
vaultbot_temoto_config/temoto_actions/ta_take_photo/: CMakeLists.txt  package.xml  umrf.json
vaultbot_temoto_config/temoto_actions/ta_take_picture/: CMakeLists.txt  package.xml  umrf.json
vaultbot_temoto_config/umrf_graphs/: Start_component.umrfg.json  start_cameras.umrfg.json  ta_navigate_robot.umrfg.json  vaultbot_initialize.umrfg.json
vaultbot_temoto_config/vaultbot_temoto_config/: CMakeLists.txt  package.xml
vaultbot_temoto_config/vaultbot_temoto_config/config/: action_dst.yaml  components.yaml  jog_left_settings.yaml  jog_right_settings.yaml  robot_description.yaml  robot_state_fp.yaml  teleop_logitech.yaml
vaultbot_temoto_config/vaultbot_temoto_config/launch/: action_assistant.launch  save_image.launch  temoto.launch  vaultbot_gripper_driver.launch  vaultbot_manip_controller.launch  vaultbot_manip_driver.launch  vaultbot_nav_controller.launch  vaultbot_nav_driver.launch
vaultbot_temoto_config/vaultbot_temoto_config/pictures/: image_1677545946.805954.ini
vaultbot_temoto_config/vaultbot_temoto_config/src/: joy_to_twsiststamped.cpp  robot_state.py
(+26 files in other folders)
